fixed spacing again

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ header video {
     font-family: "Barlow Semi Condensed", monospace;
     font-size: 2em;
     position: relative;
-    margin-top: -18em;
+    margin-top: -15em;
 }
 
 .aboutme .nametag h1 {
